added anchors fix guarantees text

--- a/card-product.html
+++ b/card-product.html
@@ -80,6 +80,9 @@
 				</nav>
 			</div>
 		</section>
+
+		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
+
 		<section class="card-product">
 			<div class="card-product__container container">
 				<div class="card-product__card card">
