--- a/guarantees.html
+++ b/guarantees.html
@@ -82,60 +82,44 @@
 				</nav>
 			</div>
 		</section>
-	
+
+		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
+
 		<section class="guarantees">
 			<div class="container">
 				<div class="guarantees__info">
 					<h3 class="guarantees__title">УСПЕШНЫЕ СДЕЛКИ
 					</h3>
 					<p class="guarantees__text">
-						Более трёх лет успешной деятельности. Около 25 тысяч обработанных заказов и тысячи довольных
-						танкистов.
-						Нас рекомендуют и советуют своим друзьям и соклановцам!
+						Более трёх лет успешной деятельности. Около 35 тысяч обработанных заказов и тысячи довольных игроков.
+						Нас рекомендуют и советуют своим друзьям!
 					</p>
-	
+
 					<h3 class="guarantees__title">ОТКРЫТЫЕ ОТЗЫВЫ</h3>
 					<p class="guarantees__text">
-						У нас имеется раздел <a href="./reviews.html">Отзывы</a>, где вы всегда можете оставить отзыв который модератор
-						по
-						возможности сразу опубликует.
-						В нашем магазине оставить отзыв может любой желающий,
-						но в тоже время мы боремся против СПАМа и рекламы других ресурсов на нашем.
+						У нас имеется раздел <a href="./reviews.html">Отзывы</a>, где вы всегда можете оставить отзыв который
+						модератор сразу опубликует. В нашем магазине оставить отзыв может любой желающий игры Fortnite, но в
+						тоже время мы боремся против СПАМа и рекламы других ресурсов на нашем.
 					</p>
-	
-					<h3 class="guarantees__title">ОФФЛАЙН ТОЧКА ПРОДАЖ</h3>
-					<p class="guarantees__text">
-						У нас есть полноценный магазин где вы можете купить скретч-карту на бонус-коды за наличные средства
-						либо
-						банковскую карту через наш POS-терминал. Также мы продаем игровые приставки, аксессуары и другое
-						лицензионное ПО. Находимся мы в г. Екатеринбург.
-						Адрес нашего магазина есть в разделе Контакты.
-					</p>
-	
+
 					<h3 class="guarantees__title">ПОДДЕРЖКА ПО ТЕЛЕФОНУ</h3>
 					<p class="guarantees__text">
-						Мы готовы связаться с вами по телефону, для этого отпишите Администратору с желанием связаться с
-						вами и
-						мы вам обязательно перезвоним!
+						Мы готовы связаться с вами по телефону, для этого отпишите нашему Администратору об обратной связи и вам обязательно перезвонят!
 					</p>
-	
-					<h3 class="guarantees__title">ОФИЦИАЛЬНЫЕ ПЛАТЕЖНЫЕ ШЛЮЗы</h3>
+
+					<h3 class="guarantees__title">ОФИЦИАЛЬНЫЕ ПЛАТЕЖНЫЕ ШЛЮЗЫ</h3>
 					<p class="guarantees__text">
-						Все платежи проходят через защищенный шлюз крупнейшего банка России, где у нас зарегистрирован
-						расчетный
-						счёт.
-						Вы можете не бояться за сохраность своих средств.
+						Все платежи проходят через защищенный шлюз крупнейшего банка России, где у нас зарегистрирован расчетный счёт. Вы можете не бояться за сохраность своих средств.
 					</p>
-	
+
 					<h3 class="guarantees__title">ОТКРЫТИЕ МАГАЗИНА И ДРУЖЕЛЮБНОСТЬ</h3>
 					<p class="guarantees__text">
-						FORTNITE это не просто магазин, это стало частью нашей жизни всего коллектива,
-						в которую было вложено не мало средств и репутацией которого мы дорожим.
+						FORTNITE - это не просто магазин скинов, это стало частью нашей жизни всего коллектива, в которую было вложено не мало времени, средств и репутацией которого мы дорожим. Добро пожаловать!
 					</p>
 				</div>
 				<div class="popular-offers">
 					<h2 class="popular-offers__title title">Популярные предложения</h2>
-	
+
 					<!-- Slider main container -->
 					<div class="popular-offers__slider swiper ">
 						<!-- Additional required wrapper -->
@@ -153,7 +137,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -166,7 +150,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -179,7 +163,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -192,7 +176,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -205,7 +189,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -218,7 +202,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -231,7 +215,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -244,7 +228,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -257,7 +241,7 @@
 									</div>
 								</a>
 							</div>
-	
+
 							<div class="popular-offers__slide swiper-slide ">
 								<a class="popular-offers__item card-item" href="#">
 									<div class="card-item__box">
@@ -271,11 +255,11 @@
 								</a>
 							</div>
 						</div>
-	
+
 						<!-- If we need pagination -->
 						<div class="popular-offers__pagination swiper-pagination"></div>
 					</div>
-	
+
 				</div>
 			</div>
 		</section>
@@ -301,8 +285,7 @@
 				<div class="footer__payment">
 					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
 					<div class="footer__payment-box">
-						<img class="footer__payment-img" src="./images/icons/perfect_money.svg"
-							alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
 						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
 						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
 						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
