--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 			<div class="container">
 				<div class="intro__inner">
 					<div class="intro__info">
-						<h1 class="intro__info-title">Официальный магазин скинов Фортнайт</h1>
+						<h1 class="intro__info-title">Официальный магазин скинов Fortnite</h1>
 						<p class="intro__info-text">
-							Магазин скиной Фортнайт, гарантия доставки 100%.
+							Магазин скиной Fortnite, гарантия доставки 100%.
 							Наш магазин прошел проверку у платежных агрегаторов — Яндекс.Касса и QIWI.Касса. Каждая
 							осуществляемая
 							транзакция проводится по всем возможным протоколам безопасности.
@@ -160,8 +160,7 @@
 
 					<div class="catalog__menu">
 						<div class="catalog__menu-box">
-							<input class="catalog__menu-search catalog-search" placeholder="поиск"
-								type="search"></input>
+							<input class="catalog__menu-search catalog-search" placeholder="поиск" type="search"></input>
 							<div class="menu-all-dropdown">
 								<p class="catalog__menu-all menu-all-holder  catalog-all ">все</p>
 							</div>
@@ -443,7 +442,7 @@
 
 				</div>
 
-				<a href="#scrollUp" class="pure-scroll"><button class="catalog__btn-anchor">Наверх</button></a>
+				<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
 
 			</div>
 		</section>
@@ -468,7 +467,7 @@
 					невозможность
 					остановиться, ведь скинов много не бывает и всегда хочется получить ещё больше. Меняй внешний вид
 					своих
-					любимых героев и открывай новые возможности игры. Перед тобой целая вселенная Фортнайт, которая ждёт
+					любимых героев и открывай новые возможности игры. Перед тобой целая вселенная Fortnite, которая ждёт
 					такого
 					смелого и неординарного героя, как ты! Покажи остальным игрокам, как нужно выглядеть и выражать свои
 					чувства
@@ -479,7 +478,7 @@
 				<p class="description__text">
 					В нашем магазине ты найдёшь потрясающие и редкие скины и целую бурю эмоций под разные ситуации в
 					игре.
-					Фортнайт – подходящая площадка для самовыражения. Покажи свою индивидуальность и создай героя,
+					Fortnite – подходящая площадка для самовыражения. Покажи свою индивидуальность и создай героя,
 					который
 					лучше
 					всего покажет твой характер и настроение. Ещё больше возможностей ты получишь, купив Боевой пропуск
@@ -493,7 +492,7 @@
 					Не переплачивай – покупай выгодно и играй с удовольствием.
 				</p>
 
-				<h2 class="description__title">Купить скины в Фортнайт </h2>
+				<h2 class="description__title">Купить скины в Fortnite </h2>
 				<p class="description__text">
 					Скины в игре играют не последнюю роль. Это выражение индивидуальности, настроения и показатель
 					успешности
@@ -502,7 +501,7 @@
 					интернет-магазине,
 					чтобы
 					выделяться в толпе похожих героев.
-					У нас ты найдёшь редкие и необычные скины, которые уже не получить в Фортнайт. Используйте
+					У нас ты найдёшь редкие и необычные скины, которые уже не получить в Fortnite. Используйте
 					легендарные,
 					эпические и другие скины, чтобы сделать игру ещё увлекательнее и интереснее.
 				</p>
@@ -519,7 +518,7 @@
 					игре.
 				</p>
 
-				<h2 class="description__title">Купить В-баксы Фортнайт </h2>
+				<h2 class="description__title">Купить В-баксы Fortnite </h2>
 				<p class="description__text">
 					Получить В-баксы можно в полной версии игры через фарм в «Сражении с бурей». Ещё валюта не спеша
 					копится
@@ -547,10 +546,10 @@
 					аккаунта.
 				</p>
 				<p class="description__text">
-					Некоторые дополнения, которые сделают Фортнайт ещё увлекательнее и интереснее.
+					Некоторые дополнения, которые сделают Fortnite ещё увлекательнее и интереснее.
 				</p>
 
-				<h2 class="description__title">Купить боевой пропуск Фортнайт</h2>
+				<h2 class="description__title">Купить боевой пропуск Fortnite</h2>
 				<p class="description__text">
 					Покупка Боевого пропуска – это выгодное вложение, ведь так ты получишь ещё больше наград за игру.
 					Совершая
@@ -580,7 +579,7 @@
 					только
 					в
 					образе героя, но и в своей истории
-					в Фортнайт. Выбери свой тернистый путь героя, проходя который, ты будешь получать массу
+					в Fortnite. Выбери свой тернистый путь героя, проходя который, ты будешь получать массу
 					положительных
 					эмоций
 					и отличные награды.
@@ -596,7 +595,7 @@
 
 				<h2 class="description__title">Купить эмоции </h2>
 				<p class="description__text">
-					Эмоции Фортнайт превращают самую обычную игру в целое приключение. Можно изобразить танец с
+					Эмоции Fortnite превращают самую обычную игру в целое приключение. Можно изобразить танец с
 					кинжалами
 					или
 					проехаться по просторам игры
@@ -606,7 +605,7 @@
 					сальто
 					назад. Что бы ты ни выбрал – это точно пригодится, чтобы привести в восторг других обитателей
 					увлекательной
-					вселенной Фортнайт.
+					вселенной Fortnite.
 				</p>
 				<p class="description__text">
 					В нашем интернет-магазине ты можешь купить любую эмоцию по своему вкусу. Мы за самовыражение и
@@ -642,8 +641,7 @@
 				<div class="footer__payment">
 					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
 					<div class="footer__payment-box">
-						<img class="footer__payment-img" src="./images/icons/perfect_money.svg"
-							alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
 						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
 						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
 						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
