--- a/news.html
+++ b/news.html
@@ -79,6 +79,8 @@
 			</div>
 		</section>
 
+		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
+
 		<section class="news__articles news-articles">
 			<div class="news-articles__container container">
 				<h1 class="news-articles__title title">Новости игры&nbsp;Fortnite</h1>
