--- a/participation.html
+++ b/participation.html
@@ -67,6 +67,9 @@
 	</header>
 
 	<main>
+
+		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
+
 		<section class="participation">
 			<div class="container">
 				<div class="participation__inner">
