--- a/reviews.html
+++ b/reviews.html
@@ -79,6 +79,8 @@
 			</div>
 		</section>
 
+		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
+
 		<section class="reviews">
 			<div class="reviews__container container">
 				<h2 class="reviews__title">Отзывы магазина скинов Fortnite</h2>
