--- a/card-product.html
+++ b/card-product.html
@@ -66,7 +66,7 @@
 
 	</header>
 
-	<main class="product-card-main">
+	<main class="product-card-main" id="scrollUp">
 		<section class="breadcrumbs">
 			<div class="container">
 				<nav aria-label="Breadcrumb" class="breadcrumb">
@@ -80,8 +80,6 @@
 				</nav>
 			</div>
 		</section>
-
-		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
 
 		<section class="card-product">
 			<div class="card-product__container container">
@@ -359,6 +357,8 @@
 		</div>
 	</div>
 
+	<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__inner">
@@ -400,6 +400,8 @@
 	<script src="js/modal-card.js"></script>
 	<script src="js/rating.js"></script>
 	<script src="js/header.js"></script>
+	<script src="js/scroll-up.js"></script>
+
 </body>
 
 </html>
