--- a/guarantees.html
+++ b/guarantees.html
@@ -55,7 +55,7 @@
 						<ul>
 							<li class="header__link"><a href="./index.html">Главная</a></li>
 							<li class="header__link header__link--active"><a href="./guarantees.html">Гарантии</a></li>
-							<li class="header__link"><a href="./news/html">Новости</a></li>
+							<li class="header__link"><a href="./news.html">Новости</a></li>
 							<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
 						</ul>
 
@@ -68,7 +68,7 @@
 	</header>
 
 
-	<main>
+	<main id="scrollUp">
 		<section class="breadcrumbs">
 			<div class="container">
 				<nav class="breadcrumb" aria-label="Breadcrumb">
@@ -85,7 +85,7 @@
 
 		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
 
-		<section class="guarantees">
+		<section class="guarantees"  >
 			<div class="container">
 				<div class="guarantees__info">
 					<h3 class="guarantees__title">УСПЕШНЫЕ СДЕЛКИ
@@ -265,6 +265,7 @@
 		</section>
 	</main>
 
+	<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
 
 	<footer class="footer">
 		<div class="container">
@@ -301,6 +302,8 @@
 	<script src="js/header.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/scroll-up.js"></script>
+
 </body>
 
 </html>
