--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<header class="header">
+	<header class="header" >
 		<div class="header__container container">
 
 			<div class="header__row">
@@ -70,8 +70,8 @@
 		</div>
 
 	</header>
-	<main>
-		<section class="intro" id="scrollUp">
+	<main id="scrollUp">
+		<section class="intro" >
 			<div class="container">
 				<div class="intro__inner">
 					<div class="intro__info">
@@ -650,7 +650,6 @@
 						<img class="footer__payment-img" src="./images/icons/mir.svg" alt="mir-icon">
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</footer>
@@ -659,6 +658,7 @@
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/countdown.js"></script>
+	<script src="js/scroll-up.js"></script>
 
 
 </body>
