--- a/news.html
+++ b/news.html
@@ -65,7 +65,7 @@
 
 	</header>
 
-	<main class="news__main main">
+	<main class="news__main main" id="scrollUp">
 		<section class="breadcrumbs">
 			<div class="container">
 				<nav aria-label="Breadcrumb" class="breadcrumb">
@@ -79,7 +79,6 @@
 			</div>
 		</section>
 
-		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
 
 		<section class="news__articles news-articles">
 			<div class="news-articles__container container">
@@ -144,6 +143,9 @@
 		</section>
 	</main>
 
+	<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
+
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__inner">
@@ -179,6 +181,8 @@
 	</footer>
 
 	<script src="js/header.js"></script>
+	<script src="js/scroll-up.js"></script>
+
 </body>
 
 </html>
