--- a/reviews.html
+++ b/reviews.html
@@ -65,7 +65,7 @@
 		</div>
 
 	</header>
-	<main>
+	<main id="scrollUp">
 		<section class="breadcrumbs">
 			<div class="container">
 				<nav aria-label="Breadcrumb" class="breadcrumb">
@@ -159,6 +159,9 @@
 			</div>
 		</section>
 	</main>
+
+	<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__inner">
@@ -193,6 +196,8 @@
 		</div>
 	</footer>
 	<script src="js/header.js"></script>
+	<script src="js/scroll-up.js"></script>
+
 </body>
 
 </html>
