--- a/guarantees.html
+++ b/guarantees.html
@@ -26,6 +26,7 @@
 					<li class="header__link header__link--active"><a href="./guarantees.html">Гарантии</a></li>
 					<li class="header__link"><a href="./news.html">Новости</a></li>
 					<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
+					<li class="header__link"><a href="./distribution.html">Раздача</a></li>
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
@@ -57,6 +58,7 @@
 							<li class="header__link header__link--active"><a href="./guarantees.html">Гарантии</a></li>
 							<li class="header__link"><a href="./news.html">Новости</a></li>
 							<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
+							<li class="header__link"><a href="./distribution.html">Раздача</a></li>
 						</ul>
 
 					</div>
@@ -85,36 +87,43 @@
 
 		<a href="#scrollUp" class="pure-scroll"><button class="btn-anchor">Наверх</button></a>
 
-		<section class="guarantees"  >
+		<section class="guarantees">
 			<div class="container">
 				<div class="guarantees__info">
 					<h3 class="guarantees__title">УСПЕШНЫЕ СДЕЛКИ
 					</h3>
 					<p class="guarantees__text">
-						Более трёх лет успешной деятельности. Около 35 тысяч обработанных заказов и тысячи довольных игроков.
+						Более трёх лет успешной деятельности. Около 35 тысяч обработанных заказов и тысячи довольных
+						игроков.
 						Нас рекомендуют и советуют своим друзьям!
 					</p>
 
 					<h3 class="guarantees__title">ОТКРЫТЫЕ ОТЗЫВЫ</h3>
 					<p class="guarantees__text">
-						У нас имеется раздел <a href="./reviews.html">Отзывы</a>, где вы всегда можете оставить отзыв который
-						модератор сразу опубликует. В нашем магазине оставить отзыв может любой желающий игры Fortnite, но в
+						У нас имеется раздел <a href="./reviews.html">Отзывы</a>, где вы всегда можете оставить отзыв
+						который
+						модератор сразу опубликует. В нашем магазине оставить отзыв может любой желающий игры Fortnite,
+						но в
 						тоже время мы боремся против СПАМа и рекламы других ресурсов на нашем.
 					</p>
 
 					<h3 class="guarantees__title">ПОДДЕРЖКА ПО ТЕЛЕФОНУ</h3>
 					<p class="guarantees__text">
-						Мы готовы связаться с вами по телефону, для этого отпишите нашему Администратору об обратной связи и вам обязательно перезвонят!
+						Мы готовы связаться с вами по телефону, для этого отпишите нашему Администратору об обратной
+						связи и вам обязательно перезвонят!
 					</p>
 
 					<h3 class="guarantees__title">ОФИЦИАЛЬНЫЕ ПЛАТЕЖНЫЕ ШЛЮЗЫ</h3>
 					<p class="guarantees__text">
-						Все платежи проходят через защищенный шлюз крупнейшего банка России, где у нас зарегистрирован расчетный счёт. Вы можете не бояться за сохраность своих средств.
+						Все платежи проходят через защищенный шлюз крупнейшего банка России, где у нас зарегистрирован
+						расчетный счёт. Вы можете не бояться за сохраность своих средств.
 					</p>
 
 					<h3 class="guarantees__title">ОТКРЫТИЕ МАГАЗИНА И ДРУЖЕЛЮБНОСТЬ</h3>
 					<p class="guarantees__text">
-						FORTNITE - это не просто магазин скинов, это стало частью нашей жизни всего коллектива, в которую было вложено не мало времени, средств и репутацией которого мы дорожим. Добро пожаловать!
+						FORTNITE - это не просто магазин скинов, это стало частью нашей жизни всего коллектива, в
+						которую было вложено не мало времени, средств и репутацией которого мы дорожим. Добро
+						пожаловать!
 					</p>
 				</div>
 				<div class="popular-offers">
@@ -286,7 +295,8 @@
 				<div class="footer__payment">
 					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
 					<div class="footer__payment-box">
-						<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg"
+							alt="perfect_money-icon">
 						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
 						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
 						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
