--- a/distribution.html
+++ b/distribution.html
@@ -28,6 +28,8 @@
 					<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 					<li class="header__link"><a href="./news.html">Новости</a></li>
 					<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
+					<li class="header__link header__link--active"><a href="./distribution.html">Раздача</a></li>
+
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
@@ -59,6 +61,7 @@
 							<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 							<li class="header__link"><a href="./news/html">Новости</a></li>
 							<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
+							<li class="header__link header__link--active"><a href="./distribution.html">Раздача</a></li>
 						</ul>
 
 					</div>
