--- a/participation.html
+++ b/participation.html
@@ -25,6 +25,7 @@
 					<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 					<li class="header__link"><a href="./news.html">Новости</a></li>
 					<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
+					<li class="header__link"><a href="./distribution.html">Раздача</a></li>
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
@@ -56,6 +57,7 @@
 							<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 							<li class="header__link"><a href="./news/html">Новости</a></li>
 							<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
+							<li class="header__link"><a href="./distribution.html">Раздача</a></li>
 						</ul>
 
 					</div>
