--- a/reviews.html
+++ b/reviews.html
@@ -24,6 +24,7 @@
 					<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 					<li class="header__link"><a href="./news.html">Новости</a></li>
 					<li class="header__link header__link--active"><a href="./reviews.html">Отзывы</a></li>
+					<li class="header__link"><a href="./distribution.html">Раздача</a></li>
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
@@ -55,6 +56,7 @@
 							<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
 							<li class="header__link"><a href="./news.html">Новости</a></li>
 							<li class="header__link header__link--active"><a href="./reviews.html">Отзывы</a></li>
+							<li class="header__link"><a href="./distribution.html">Раздача</a></li>
 
 						</ul>
 
