added privacy-policy.html, some fixes

--- a/reviews.html
+++ b/reviews.html
@@ -172,10 +172,10 @@
 						<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
 					</a>
 					<p class="footer__text">Премиум магазин скинов Fortnite</p>
-					<a class="footer__political-link" href="#">
+					<a class="footer__political-link" href="./privacy-policy.html">
 						<span>Политика конфиденциальности</span>
 					</a>
-					<a class="footer__agreement-link" href="#">
+					<a class="footer__agreement-link" href="./privacy-policy.html">
 						<span>Пользовательское соглашение</span>
 					</a>
 				</div>
