--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -57,7 +57,7 @@
 						<ul>
 							<li class="header__link "><a href="./index.html">Главная</a></li>
 							<li class="header__link"><a href="./guarantees.html">Гарантии</a></li>
-							<li class="header__link"><a href="./news/html">Новости</a></li>
+							<li class="header__link"><a href="./news.html">Новости</a></li>
 							<li class="header__link"><a href="./reviews.html">Отзывы</a></li>
 							<li class="header__link"><a href="./distribution.html">Раздача</a></li>
 						</ul>
