--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1035,7 +1035,7 @@
 			<div class="footer__inner">
 				<div class="footer__info">
 					<a class="logo" href="./index.html">
-						<img class="logo__img" src="/images/icons/logo.svg" alt="logo">
+						<img class="logo__img" src="./images/icons/logo.svg" alt="logo">
 					</a>
 					<p class="footer__text">Премиум магазин скинов Fortnite</p>
 					<a class="footer__political-link" href="#">
@@ -1049,13 +1049,13 @@
 				<div class="footer__payment">
 					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
 					<div class="footer__payment-box">
-						<img class="footer__payment-img" src="/images/icons/perfect_money.svg" alt="perfect_money-icon">
-						<img class="footer__payment-img" src="/images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
-						<img class="footer__payment-img" src="/images/icons/yandex-money.svg" alt="yandex-money-icon">
-						<img class="footer__payment-img" src="/images/icons/visa.svg" alt="visa-icon">
-						<img class="footer__payment-img" src="/images/icons/mastercard.svg" alt="mastercard-icon">
-						<img class="footer__payment-img" src="/images/icons/payeer.svg" alt="payeer-icon">
-						<img class="footer__payment-img" src="/images/icons/mir.svg" alt="mir-icon">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
+						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
+						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
+						<img class="footer__payment-img" src="./images/icons/mastercard.svg" alt="mastercard-icon">
+						<img class="footer__payment-img" src="./images/icons/payeer.svg" alt="payeer-icon">
+						<img class="footer__payment-img" src="./images/icons/mir.svg" alt="mir-icon">
 					</div>
 				</div>
 
