--- a/card-product.html
+++ b/card-product.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fortnite.market</title>
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media.css">
@@ -153,8 +154,158 @@
 						<img class="card__img" src="./images/card-img1.png" alt="Снегобой">
 					</div>
 				</div>
+
 			</div>
 		</section>
+
+		<section class="popular-offers-section">
+
+			<div class="container">
+				<div class="popular-offers">
+					<h2 class="popular-offers__title title">Рекомендуемые товары</h2>
+
+					<!-- Slider main container -->
+					<div class="popular-offers__slider swiper ">
+						<!-- Additional required wrapper -->
+						<div class="swiper-wrapper popular-offers__wrapper">
+							<!-- Slides -->
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">Джон Уик</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/John-Wick.png" alt="john-wick">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">Какаши</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/kakashi.png" alt="kakashi">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">снегобой</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/snowboy.png" alt="snow-boy">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">в-баксы</p>
+										<div class="card-item__img small-img">
+											<img src="./images/product-characters/b-cash.png" alt="b-cash">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">в-баксы</p>
+										<div class="card-item__img small-img">
+											<img src="./images/product-characters/b-cash.png" alt="b-cash">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">Джон Уик</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/John-Wick.png" alt="john-wick">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">Какаши</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/kakashi.png" alt="kakashi">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">снегобой</p>
+										<div class="card-item__img">
+											<img src="./images/product-characters/snowboy.png" alt="snow-boy">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">в-баксы</p>
+										<div class="card-item__img small-img">
+											<img src="./images/product-characters/b-cash.png" alt="b-cash">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+
+							<div class="popular-offers__slide swiper-slide ">
+								<a class="popular-offers__item card-item" href="./card-product.html">
+									<div class="card-item__box">
+										<div class="card-item__elipse"></div>
+										<p class="card-item__name">в-баксы</p>
+										<div class="card-item__img small-img">
+											<img src="./images/product-characters/b-cash.png" alt="b-cash">
+										</div>
+										<p class="card-item__price">599 р</p>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="popular-offers__pagination swiper-pagination"></div>
+					</div>
+
+				</div>
+			</div>
+		</section>
+
 	</main>
 
 	<div class="modal micromodal-slide" id="modal" aria-hidden="true">
@@ -397,17 +548,19 @@
 			</div>
 		</div>
 	</footer>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/micromodal/0.4.10/micromodal.min.js"
+	<script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/micromodal/0.4.10/micromodal.min.js"
 		integrity="sha512-qcwcAul7d7yUcoz3MmQABiaGDa+gVkaDWgZX6wEd/z3I6z62nQCDW3EqioQG+O+QlGCpxmJLdH5snh4IaDPiPA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="js/modal.js"></script>
-	<script src="js/modal-card.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
-	<script src="js/rating.js"></script>
+	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
+	<script src="js/main.js"></script>
+	<script defer src="js/modal.js"></script>
+	<script defer src="js/modal-card.js"></script>
+	<script defer src="js/rating.js"></script>
 	<script src="js/header.js"></script>
 	<script src="js/scroll-up.js"></script>
+
 
 </body>
 
