--- a/guarantees.html
+++ b/guarantees.html
@@ -135,7 +135,7 @@
 						<div class="swiper-wrapper popular-offers__wrapper">
 							<!-- Slides -->
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">Джон Уик</p>
@@ -148,7 +148,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">Какаши</p>
@@ -161,7 +161,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">снегобой</p>
@@ -174,7 +174,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">в-баксы</p>
@@ -187,7 +187,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">в-баксы</p>
@@ -200,7 +200,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">Джон Уик</p>
@@ -213,7 +213,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">Какаши</p>
@@ -226,7 +226,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">снегобой</p>
@@ -239,7 +239,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">в-баксы</p>
@@ -252,7 +252,7 @@
 							</div>
 
 							<div class="popular-offers__slide swiper-slide ">
-								<a class="popular-offers__item card-item" href="#">
+								<a class="popular-offers__item card-item" href="./card-product.html">
 									<div class="card-item__box">
 										<div class="card-item__elipse"></div>
 										<p class="card-item__name">в-баксы</p>
